Fix issue with phonegap develope app

--- a/src/css/index.less
+++ b/src/css/index.less
@@ -35,3 +35,13 @@ a.selection span.icon {
 	margin-right: -30px;
 	color: #999;
 }
+.plane-pic {
+	vertical-align: bottom;
+	margin-right: -100px;
+}
+.click-instruction {
+	width: 100px;
+	display: inline-block;
+	text-align: center;
+	padding: 20px;
+}
